# orm-aiagent

./: .gitignore  CLAUDE.md  README.md  package-lock.json
agent/: main.py  pyproject.toml
agent/tools/: __init__.py  _paths.py  detect_schema_changes.py  read_prisma_schema.py  read_product_file.py  run_npm_script.py  search_in_product.py  sync_dto_with_schema.py  write_product_file.py
demo-nestjs/: package-lock.json  package.json  tsconfig.tsbuildinfo
demo-nestjs/prisma/: schema.prisma
demo-nestjs/prisma/migrations/20260613040117_init/: migration.sql
demo-nestjs/prisma/migrations/20260614075620_update_stock/: migration.sql
demo-nestjs/prisma/migrations/20260619014835_init/: migration.sql
demo-nestjs/prisma/migrations/20260619015617_auto_sync/: migration.sql
demo-nestjs/prisma/migrations/20260619043317_auto_sync/: migration.sql
demo-nestjs/src/: app.module.ts
demo-nestjs/src/prisma/: prisma.service.ts
demo-nestjs/src/product/: product.controller.ts  product.service.ts
demo-nestjs/src/product/dto/: create-product.dto.ts  update-product.dto.ts
nestjs-proj/: docker-compose.yml  tsconfig.json
nestjs-proj/src/: main.ts
